--- a/debian/control
+++ b/debian/control
@@ -18,26 +18,14 @@ Homepage: http://www.kde.org/
 Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-applications/kdesdk-strigi-analyzers.git/
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kdesdk-strigi-analyzers.git
 
-Package: kdesdk-strigi-plugins
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: software development file format plugins for Strigi Desktop Search
- These plugins allow Strigi Desktop Search to extract additional information
- about some file formats often used in software development.
- .
- Strigi plugins are included for:
-  * Patch files (diff)
-  * Qt Linguist files (ts)
-  * Gettext translation files (po)
-  * XML localisation files (xliff)
- .
- This package is part of the KDE Software Development Kit module.
- 
 Package: kdesdk-strigi-analyzers-dbg
-Section: debug
 Architecture: any
-Priority: extra
-Depends: ${misc:Depends}, kde-runtime-dbg, kate-dbg, kdesdk-strigi-plugins (= ${binary:Version}) 
+Depends: kate-dbg,
+         kde-runtime-dbg,
+         kdesdk-strigi-plugins (= ${binary:Version}),
+         ${misc:Depends}
 Description: debugging symbols for the KDE Software Development Kit module
  This package contains debugging files used to investigate problems with
  binaries included in the KDE Software Development Kit module.
+Section: debug
+Priority: extra
