--- a/debian/control
+++ b/debian/control
@@ -15,8 +15,8 @@ Build-Depends: cmake,
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.6
 Homepage: http://www.kde.org/
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/kdesdk-strigi-analyzers.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/kdesdk-strigi-analyzers.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kdesdk-strigi-analyzers.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kdesdk-strigi-analyzers.git
 
 Package: kdesdk-strigi-plugins
 Architecture: any
